--- a/src/scss/addNodeForm.scss
+++ b/src/scss/addNodeForm.scss
@@ -1,15 +1,12 @@
 @import './mixins.scss';
 
 .addNode{
-   margin: 0 auto;
-   width: 60%;
-   max-width: 1500px;
    margin-bottom: 20px;
    display: flex;
    flex-direction: column;
-   align-items: flex-end;
+   align-items: center;
    & input{
-      width: 100%;
+      width: 50%;
       min-width: 200px;
       padding: 5px 10px;
       border-radius: 20px;
@@ -18,6 +15,11 @@
       &:focus{
          box-shadow: 0 0 10px rgba(0, 191, 255,0.5);
       }
+   }
+   & div {
+      width: 50%; 
+      display: flex;
+      justify-content: flex-end;
    }
    & button {
       @include adaptiv-font(16,13);
