--- a/src/scss/info.scss
+++ b/src/scss/info.scss
@@ -1,7 +1,11 @@
 @import './mixins.scss';
 
 .info{
-   padding-top: 50px;
+   position: absolute;
+   left: 50%;
+   top: 50%;
+   padding: 90px 20px 0;
+   transform: translate(-50%, -50%);
    width: 100%;
    display: flex;
    justify-content: center;
@@ -10,8 +14,11 @@
 
 .info__content{
    width: 50%;
-   min-width: 500px;
+   min-width: 80%;
    padding: 100px;
+   @media (max-width: 600px){
+      padding: 50px 20px;
+   }
    background: rgba(173, 255, 47,0.5);
    border-radius: 25px;
    @include adaptiv-font(17,14);
