--- a/src/scss/nodesList.scss
+++ b/src/scss/nodesList.scss
@@ -9,14 +9,15 @@
    & .node{
       cursor: pointer;
       padding: 10px;
+      line-height: 1.5;
       width: 50%;
-      min-width: 300px;
+      min-width: 280px;
       white-space: normal;
       border: 1px solid black;
       margin-bottom: 20px; 
-      & span::first-letter{text-transform: uppercase};
-      & strong{ @include adaptiv-font(20,15);}
-      & small{ @include adaptiv-font(15,10);}
+      & span::first-letter{text-transform: uppercase;};
+      & strong{ @include adaptiv-font(18,15); margin-right: 15px}
+      & small{ @include adaptiv-font(13,10);}
       &:last-child{margin-bottom: 0};
       border-radius: 10px;
       background: Linen;
