add webpack, add typescript, add rtk query, remove redux

--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -15,7 +15,7 @@
 @import './alert.scss';
 @import './header.scss';
 @import './nodesList.scss';
-@import './addNodeForm.scss';
+@import 'addNoteForm';
 @import './info.scss';
 @import './loader.scss';
 
